--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,9 @@
 .row-fluid
-  .span12
-    %h3 Twitter Api Example Here
-    %hr
+  .span6.scroll
+    %table.table.table-bordered.table-striped
+      %th Tweets from the Twitter Bootstrap Team
+      %tbody.user-tweets
+  .span6.scroll
+    %table.table.table-bordered.table-striped
+      %th Tweets near my house in Key West
+      %tbody.location-tweets
